tests/golden/error/cross_file_arg_mismatch/main.expected
[E0010] Error: expected `Nat`, found `Bool`
   в•ӯв”Җ[tests/golden/error/cross_file_arg_mismatch/main.tg:9:13]
   в”Ӯ
 9 в”Ӯ     add_one(true)
   в”Ӯ             в”Җв”Җв”¬в”Җ  
   в”Ӯ               в•°в”Җв”Җв”Җ expected `Nat`, found `Bool`
   в”Ӯ               в”Ӯ   
   в”Ӯ               в•°в”Җв”Җв”Җ expected due to argument 1
в”Җв”Җв”Җв•Ҝ
note: parameter type declared in `add_one`
   в•ӯв”Җ[tests/golden/error/cross_file_arg_mismatch/math.tg:3:1]
   в”Ӯ
 3 в”Ӯ в•ӯв”Җв–¶ pub fn add_one(x: Nat) -> Nat {
   в”Ҷ в”Ҷ   
 5 в”Ӯ в”ңв”Җв–¶ }
   в”Ӯ в”Ӯ       
   в”Ӯ в•°в”Җв”Җв”Җв”Җв”Җв”Җв”Җ parameter type declared in `add_one`
в”Җв”Җв”Җв•Ҝ

error: aborting due to 1 error
